# Iris-Codec

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build-linux-release.yml  build-linux.yml  build-macos-release.yml  build-macos.yml  build-release.yml  build-releases.yml  build-wasm.yml  build-win-release.yml  build-win.yml  cmake-linux-CI.yml  cmake-linux.yml  cmake-macos-CI.yml  cmake-macos.yml  cmake-multi-platform.yml  cmake-win64-CI.yml  cmake-win64.yml  cpp.yml  distribute-npm.yml  distribute-pypi.yml  distribute-releases.yml  emcmake-wasm-CI.yml
cmake/: avif.cmake  dicom.cmake  hwy.cmake  openslide.cmake  png.cmake  turbo-jpeg.cmake
javascript/: CMakeLists.txt  IrisCodecJavascript.cpp  README.MD  package.json
licenses/: ZLIB_LICENSE
python/: IrisCodecPython.cpp  IrisCodecPython.hpp  IrisEncoderPython.cpp  IrisTypesPython.hpp  README.md  gen_python_packages.sh  pyproject.toml
python/Iris/: Codec.py  Codec.pyi  Core.pyi  __init__.py  __init__.pyi  iris_core.pyi
python/Iris/Encoder/: Encoder.pyi  __init__.py  __init__.pyi
src/: EncoderMain.cpp  IrisCodecCache.cpp  IrisCodecCache.hpp  IrisCodecContext.cpp  IrisCodecContext.hpp  IrisCodecCore.hpp  IrisCodecDcmBridge.cpp  IrisCodecDeriveLayers.cpp  IrisCodecEncoder.cpp  IrisCodecEncoder.hpp  IrisCodecExtension.cpp  IrisCodecFile.cpp  IrisCodecFile.hpp  IrisCodecPriv.hpp  IrisCodecPrivTypes.hpp  IrisCodecPython.hpp  IrisCodecSlide.cpp  IrisCodecSlide.hpp  IrisCodecTypes.hpp
